--- a/TODO
+++ b/TODO
@@ -1,1 +1,8 @@
 Test deletes?
+fix ->parent 
+ - (find with a single arg? pfft)
+ - undef if $pcol is undef
+
+direct_children should be
+ - no regex $match =~ s/($sep)+/$sep/g
+ - clean up join(): join($sep, $self->get_column($path_col), '%', $sep,'%');
